test/fail_compilation/fail127.d
char[][] Level2Text = {"LOW", "MEDIUM", "HIGH"};
